# xspf-lib

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pl.xspf  pyproject.toml  setup.py  xspf-lib.py  xspf_gen.py
.github/workflows/: docs.yml  publish.yml  python-package.yml  python-publish.yml  test.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
test/: test_module.py  test_testcases_fail_validation.py  test_testcases_pass_validation.py  test_uri.py
test/testcase/: README.txt
test/testcase/version_1/fail/: playlist-attribute-forbidden-annotation.xspf  playlist-attribute-forbidden-playlist.xspf  playlist-element-forbidden-attribution.xspf  playlist-extension-application-missing.xspf  playlist-link-rel-missing.xspf  playlist-markup-meta.xspf  playlist-meta-rel-missing.xspf  playlist-namespace-nested-broken.xspf  playlist-nonleaf-content-attribution.xspf  playlist-nonleaf-content-trackList.xspf  track-extension-application-missing.xspf  track-link-rel-missing.xspf  track-markup-meta.xspf  track-meta-rel-missing.xspf  track-nonleaf-content.xspf  track-whitespace-in-between.xspf
test/testcase/version_1/pass/: playlist-broken-relative-paths.xspf  playlist-empty-creator.xspf  playlist-empty-meta.xspf  playlist-empty-title.xspf  playlist-extension.xspf  playlist-inverted-order.xspf  playlist-namespace-nested-proper.xspf  playlist-namespace-two-additions.xspf  playlist-relative-paths.xspf  track-empty-creator.xspf  track-empty-meta.xspf  track-extension.xspf  track-whitespace-anyURI.xspf  track-whitespace-nonNegativeInteger.xspf
tests/: test_module.py  test_testcases_fail_validation.py  test_testcases_pass_validation.py  test_uri.py
tests/testcase/version_1/fail/: playlist-baddate.xspf  playlist-badversion.xspf  playlist-extension-application-missing.xspf  playlist-link-rel-missing.xspf  playlist-markup-annotation.xspf  playlist-markup-creator.xspf  playlist-markup-meta.xspf  playlist-markup-title.xspf  playlist-meta-rel-missing.xspf  playlist-missingversion.xspf  playlist-namespace-wrong-string.xspf  playlist-nonleaf-content-playlist.xspf  playlist-root-name.xspf  track-extension-application-missing.xspf  track-link-rel-missing.xspf  (+1 more)
xspf_lib/: __init__.py  _version.py  base.py  builders.py  constants.py  elements.py  parsers.py  types.py  utils.py
(+13 files in other folders)
