[project]
name = "xspf-lib"
version = "0.3.2"
description = "Library for work with xspf format"
authors = [
    {name = "Dzmitry Izaitka", email = "dem214overlord@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.rst"
license = {text = "MIT"}
keywords = ["xspf playlist"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Source = "https://github.com/dem214/xspf-lib"
"Bug Tracker" = "https://github.com/dem214/xspf-lib/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
lint = [
    "flake8>=5.0.4",
    "flake8-pyprojecttoml>=0.0.2",
    "mypy>=1.3.0",
]

[tool.pdm.scripts]
test = "pytest"
flake8 = "flake8 xspf_lib"
mypy = "mypy xspf_lib"
lint = {composite = ["flake8", "mypy"]}

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = ["str-bytes-safe"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
